--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@types/jaro-winkler": "^0.2.2",
+    "jaro-winkler": "^0.2.8",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18",
