--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/backend": "^1.13.10",
-    "@clerk/nextjs": "^5.3.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -21,6 +19,7 @@
     "jaro-winkler": "^0.2.8",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18"
   },
