--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "nextjs",
-  "version": "0.1.0",
+  "name": "beer-advent",
+  "author": "Ryan Bucinell <rbucinell.dev@gmail.com>",
+  "version": "0.2.0",
   "private": true,
+  "homepage": "https://beer-advent.vercel.app/",
+  "bugs": {
+    "url": "https://github.com/ryanbucinell/beer-advent/issues"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/unstorage-adapter": "^2.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -18,20 +24,21 @@
     "@types/jaro-winkler": "^0.2.2",
     "jaro-winkler": "^0.2.8",
     "mongoose": "^7.6.3",
-    "next": "13.5.6",
+    "next": "15.0.2",
     "next-auth": "^4.24.10",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18",
+    "unstorage": "^1.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
+    "@types/node": "^20.12.8",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
+    "eslint-config-next": "13.5.6"
   }
 }
