--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@types/jaro-winkler": "^0.2.2",
+    "dayjs": "^1.11.13",
     "jaro-winkler": "^0.2.8",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
