--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/jaro-winkler": "^0.2.2",
     "dayjs": "^1.11.13",
     "jaro-winkler": "^0.2.8",
@@ -30,8 +31,8 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.2.2"
   }
 }
