--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/jaro-winkler": "^0.2.2",
+    "better-auth": "^1.2.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "jaro-winkler": "^0.2.8",
+    "lucide-react": "^0.523.0",
     "mongoose": "^8.16.0",
     "next": "^15.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "swr": "^2.2.5"
+    "react-hook-form": "^7.58.1",
+    "sonner": "^2.0.5",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
@@ -33,6 +44,7 @@
     "eslint-config-next": "^15.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5.2.2"
   }
 }
