--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -54,7 +54,7 @@
       ],
       "@util/*": [
         "./app/util/*"
-      ],
+      ]
     }
   },
   "include": [
@@ -63,7 +63,10 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/api/participants/[participantId].js",
-    "lib/swr.js"
+    "lib/swr.js",
+    ".next\\dev/types/**/*.ts",
+    ".next\\dev/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
